phone number alignment fix

--- a/src/app/modules/admin/apps/customers/add/add.component.scss
+++ b/src/app/modules/admin/apps/customers/add/add.component.scss
@@ -31,3 +31,6 @@
 ::ng-deep .mat-form-field-flex {
     align-items: center !important;
 }
+::ng-deep .phone-number-outline .mat-form-field-infix input {
+    margin-bottom: 2px !important;
+}
