--- a/src/app/modules/admin/apps/customers/navigation/customer-information/add/add.component.scss
+++ b/src/app/modules/admin/apps/customers/navigation/customer-information/add/add.component.scss
@@ -91,6 +91,9 @@ mat-grid-tile {
 ::ng-deep .phone-number-outline .mat-form-field-outline-start {
     width: 28px !important;
 }
+::ng-deep .phone-number-outline .mat-form-field-infix input {
+    margin-bottom: 2px !important;
+}
 ::ng-deep .mat-form-field-flex {
     align-items: center !important;
 }
